# rv_agentic_dev

./: .env.example  .gitignore  .lead_list_worker.log.old  .lead_list_worker.log.old2  .lead_list_worker.log.old3  CLAUDE.md  DEPLOYMENT_READY.md  MONITORING_GUIDE.md  README.md  RESILIENCE_FIXES.md  WORKER_MANAGEMENT.md  app.py  check_run_results.py  check_worker_status.sh  cleanup_test_data.py  clear_seeding_for_run.py  companies_0915b268_20251120_211332.csv  contact_researcher.py  contacts_0915b268_20251120_211332.csv  debug_runs.py  force_agent_discovery.py  monitor_e2e_5min.sh  monitor_e2e_test.sh  monitor_multi_region.sh  narpm_client.py  pyproject.toml  requirements.txt  run_full_test.py  run_real_tests.sh  run_tests_simple.py  sequence_enroller.py  start_all_workers.sh  submit_test_run.py  supabase_client.py  test_export_promotion.py  test_export_simple.py  test_fetch_page.py  test_mcp_direct.py  test_multi_region_denver.py  test_parallel_multi_region_denver.py  (+4 more)
IMPORTANT_DOCS/: GPT-5_best_practices.md  Openai_AI_SDK.md  mcp_trigger_n8n.md  mcp_with_oaiAgentsSDK.md  openai_responses_api.md  pm_pipeline_tables.md  rv_agentic_system_overview.md
claude_generated_docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  MULTI_REGION_IMPLEMENTATION.md  MULTI_REGION_STATUS.md  OVERSAMPLE_STRATEGY.md  PARALLEL_IMPLEMENTATION_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_REPORT.md  PHASE1_TEST_RESULTS.md  PHASE2.1_COMPLETION_REPORT.md  PHASE2.2_STATUS.md  PHASE2.3_COMPLETE.md  PHASE2_COMPLETE.md  REAL_TESTING_GUIDE.md
deployment/: EC2_PRODUCTION_GUIDE.md  (+3 more)
(+69 files in other folders)
